crates/ruff_linter/src/rules/ssort/snapshots/ruff_linter__rules__ssort__tests__mixed_runtime_initialisation.py_dependency.snap
---
source: crates/ruff_linter/src/rules/ssort/mod.rs
---
SS001 [*] Statements are unsorted
 --> mixed_runtime_initialisation.py:1:1
  |
1 | / class Loopy:
2 | |
3 | |     def method(self):
4 | |         return self._method()
5 | |
6 | |     attr = method
7 | |
8 | |     def _method(self):
9 | |         pass
  | |____________^
  |
help: Organize statements
1 | class Loopy:
2 | 
3 +     def _method(self):
4 +         pass
5 + 
6 |     def method(self):
7 |         return self._method()
8 | 
9 |     attr = method
  - 
  -     def _method(self):
  -         pass
note: This is an unsafe fix and may change runtime behavior
