crates/ruff_linter/src/rules/ssort/snapshots/ruff_linter__rules__ssort__tests__reversed_cycle.py_narrative.snap
---
source: crates/ruff_linter/src/rules/ssort/mod.rs
---
SS002 Function call cycle detected: a() -> c() -> b() -> a()
 --> reversed_cycle.py:1:1
  |
1 | / def a():
2 | |     return c()
  | |______________^
3 |   def b():
4 |       return a()
  |
