crates/ruff_linter/src/rules/ssort/snapshots/ruff_linter__rules__ssort__tests__simple_decorator.py_dependency.snap
---
source: crates/ruff_linter/src/rules/ssort/mod.rs
---
SS001 [*] Statements are unsorted
 --> simple_decorator.py:1:1
  |
1 | / def function():
2 | |     return dependency()
3 | |
4 | | def decorator(fn):
5 | |     return fn
6 | |
7 | | @decorator
8 | | def dependency():
9 | |     return True
  | |_______________^
  |
help: Organize statements
  - def function():
  -     return dependency()
  - 
1 | def decorator(fn):
2 |     return fn
3 | 
4 | @decorator
5 | def dependency():
6 |     return True
7 + 
8 + def function():
9 +     return dependency()
note: This is an unsafe fix and may change runtime behavior
